--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,70 +37,77 @@ jobs:
     - name: Deploy to server
       run: |
         ssh $SSH_USER@$SERVER_HOST << 'DEPLOY_EOF'
-          set -e
-          
-          # Navigate to project directory
-          cd "$PROJECT_PATH"
-          
-          # Pull latest changes
-          echo "Fetching latest changes..."
-          git fetch origin main
-          echo "Current commit: $(git rev-parse HEAD)"
-          echo "Remote commit: $(git rev-parse origin/main)"
-          git reset --hard origin/main
-          echo "Updated to: $(git log --oneline -1)"
-          
-          # Create environment files if they don't exist
-          if [ ! -f ban_stats/.env ]; then
-            echo "Creating ban_stats .env file..."
-            cat > ban_stats/.env << ENV_EOF
-        DISCORD_TOKEN=$BAN_STATS_TOKEN
-        GUILD_ID=$GUILD_ID
-        ENV_EOF
-          fi
-          
-          if [ ! -f random_colors/.env ]; then
-            echo "Creating random_colors .env file..."
-            cat > random_colors/.env << ENV_EOF
-        DISCORD_TOKEN=$RANDOM_COLORS_TOKEN
-        GUILD_ID=$GUILD_ID
-        ROLE_NAME=Random Colors
-        LOG_CHANNEL_ID=$LOG_CHANNEL_ID
-        ENV_EOF
-          fi
-          
-          if [ ! -f summary/.env ]; then
-            echo "Creating summary .env file..."
-            cat > summary/.env << ENV_EOF
-        MISTRAL_API_KEY=$MISTRAL_API_KEY
-        BOT_TOKEN=$SUMMARY_BOT_TOKEN
-        GUILD_ID=$GUILD_ID
-        ENV_EOF
-          fi
-          
-          if [ ! -f flowchart/.env ]; then
-            echo "Creating flowchart .env file..."
-            cat > flowchart/.env << ENV_EOF
-        DISCORD_BOT_TOKEN=$FLOWCHART_BOT_TOKEN
-        ENV_EOF
-          fi
-          
-          # Setup environment if needed
-          if [ ! -d "venv" ]; then
-            echo "Setting up Python environment..."
-            ./scripts/setup_venv.sh
-          else
-            echo "Updating dependencies..."
-            source venv/bin/activate
-            pip install -r requirements.txt
-          fi
-          
-          # Deploy using PM2
-          echo "Deploying bots..."
-          ./scripts/deploy.sh
-          
-          echo "Deployment completed successfully!"
-        DEPLOY_EOF
+        set -e
+        
+        # Navigate to project directory
+        echo "Navigating to project directory: $PROJECT_PATH"
+        cd "$PROJECT_PATH"
+        
+        # Verify we're in a git repository
+        if [ ! -d ".git" ]; then
+          echo "Error: Not a git repository!"
+          exit 1
+        fi
+        
+        # Pull latest changes
+        echo "Fetching latest changes..."
+        git fetch origin main
+        echo "Current commit: $(git rev-parse HEAD)"
+        echo "Remote commit: $(git rev-parse origin/main)"
+        git reset --hard origin/main
+        echo "Updated to: $(git log --oneline -1)"
+        
+        # Create environment files if they don't exist
+        if [ ! -f ban_stats/.env ]; then
+          echo "Creating ban_stats .env file..."
+          cat > ban_stats/.env << 'ENV_EOF'
+DISCORD_TOKEN=$BAN_STATS_TOKEN
+GUILD_ID=$GUILD_ID
+ENV_EOF
+        fi
+        
+        if [ ! -f random_colors/.env ]; then
+          echo "Creating random_colors .env file..."
+          cat > random_colors/.env << 'ENV_EOF'
+DISCORD_TOKEN=$RANDOM_COLORS_TOKEN
+GUILD_ID=$GUILD_ID
+ROLE_NAME=Random Colors
+LOG_CHANNEL_ID=$LOG_CHANNEL_ID
+ENV_EOF
+        fi
+        
+        if [ ! -f summary/.env ]; then
+          echo "Creating summary .env file..."
+          cat > summary/.env << 'ENV_EOF'
+MISTRAL_API_KEY=$MISTRAL_API_KEY
+BOT_TOKEN=$SUMMARY_BOT_TOKEN
+GUILD_ID=$GUILD_ID
+ENV_EOF
+        fi
+        
+        if [ ! -f flowchart/.env ]; then
+          echo "Creating flowchart .env file..."
+          cat > flowchart/.env << 'ENV_EOF'
+DISCORD_BOT_TOKEN=$FLOWCHART_BOT_TOKEN
+ENV_EOF
+        fi
+        
+        # Setup environment if needed
+        if [ ! -d "venv" ]; then
+          echo "Setting up Python environment..."
+          ./scripts/setup_venv.sh
+        else
+          echo "Updating dependencies..."
+          source venv/bin/activate
+          pip install -r requirements.txt
+        fi
+        
+        # Deploy using PM2
+        echo "Deploying bots..."
+        ./scripts/deploy.sh
+        
+        echo "Deployment completed successfully!"
+DEPLOY_EOF
       env:
         PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
         BAN_STATS_TOKEN: ${{ secrets.BAN_STATS_DISCORD_TOKEN }}
@@ -113,13 +120,13 @@ jobs:
         
     - name: Verify deployment
       run: |
-        ssh $SSH_USER@$SERVER_HOST "
-          cd \"$PROJECT_PATH\"
-          echo 'Current PM2 status:'
-          pm2 status
-          echo 'Checking bot processes...'
-          pm2 list | grep -E '(ban-stats-bot|random-colors-bot|summary-bot|flowchart-bot)' || echo 'Some bots may not be running'
-        "
+        ssh $SSH_USER@$SERVER_HOST << 'VERIFY_EOF'
+        cd "$PROJECT_PATH"
+        echo 'Current PM2 status:'
+        pm2 status
+        echo 'Checking bot processes...'
+        pm2 list | grep -E '(ban-stats-bot|random-colors-bot|summary-bot|flowchart-bot)' || echo 'Some bots may not be running'
+VERIFY_EOF
       env:
         PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
         
